compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@syntax__loop__continue_outside_loop.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/loop/continue_outside_loop.test
input_file: compiler/eight-tests/tests/ui/syntax/loop/continue_outside_loop.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::continue_outside_loop

  × continue statement outside of loop
   ╭─[tests/ui/syntax/loop/continue_outside_loop.test:3:5]
 2 │   if (false) {
 3 │     continue;
   ·     ────┬────
   ·         ╰── there is no enclosing loop
 4 │   }
   ╰────
